[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "2.2.0"

[dev-dependencies]
solana-sdk = "2.2.0"
solana-client = "2.2.0"
solana-rpc-client-api = "2.2.0"
solana-program-test = "2.2.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
log = "0.4.27"
dotenvy = "0.15.7"
env_logger = "0.11.8"

[lib]
crate-type = ["cdylib", "lib"]

[[example]]
name = "counter"
path = "examples/counter.rs"